--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -8,7 +8,8 @@ shadow-exclude = [ "n:e:Menu", "!focused" ];
 # shadow-offset-y = -7;
 
 opacity-rule = [
-  "90:class_g = 'Code'"
+  "92:class_g = 'Code'",
+  "92:class_g = 'Alacritty'"
 ]
 
 fade-delta = 4;
@@ -19,5 +20,5 @@ wintypes:
 {
   menu = { shadow = false; };
   tooltip = { fade = true; shadow = false; };
-  # dock = { opacity = 0.9 };
+  dock = { opacity = 0.92 };
 }
